<resources>
    <string name="app_name">沃智联</string>
    <string name="save">保存</string>
    <string name="please_input_user">请输入您的账号</string>
    <string name="please_input_password">请输入您的密码</string>
    <string name="login">登录</string>
    <string name="remember_password">记住密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="check_phone">验证手机</string>
    <string name="please_input_eleven_phone_number">请输入11位手机号</string>
    <string name="please_input_give_check_code">请输入收到的验证码</string>
    <string name="get_check_code">获取验证码</string>
    <string name="next_step">下一步</string>
    <string name="forget_password_title">忘记密码</string>
    <string name="primary_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">密码确认</string>
    <string name="please_input_primary_password">请输入原始密码</string>
    <string name="please_input_new_password">请输入新密码</string>
    <string name="new_password_confirm">新密码确认</string>
    <string name="confirm">确 定</string>
    <string name="primary_password_explain">修改密码说明:</string>
    <string name="all_devices_count">总设备数量</string>
    <string name="up_line_count">在线数量</string>
    <string name="down_line_count">离线数量</string>
    <string name="device_status">设备状态</string>
    <string name="data_name">数据名称</string>
    <string name="add_photo">添加图片</string>
    <string name="device_name_">设备名称:</string>
    <string name="model_number">型号:</string>
    <string name="save_user">保管人员:</string>
    <string name="put_place">安放位置:</string>
    <string name="down_devices_fault_need_engineer_handler">以下设备故障,需要工程师处理</string>
    <string name="hint_info">警告信息:</string>
    <string name="hint_time">警告时间:</string>
    <string name="home">首页</string>
    <string name="my_devices">我的设备</string>
    <string name="hint">预警</string>
    <string name="not_input_user">还未输入用户名</string>
    <string name="not_input_password">还未输入用户密码</string>
    <string name="login_success">登录成功</string>
    <string name="network_error">网络出错</string>
</resources>
