<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f8f9fa"
    android:orientation="vertical"
    tools:context=".login.view.ModifyPasswordActivity">

    <include layout="@layout/base_title"></include>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:background="@color/ffffff"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_E7E7E7"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginLeft="@dimen/dp_15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/primary_password"
                android:textColor="@color/black"
                android:textSize="@dimen/dp_17" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/et_paimary_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_40"
                    android:background="@null"
                    android:hint="@string/please_input_primary_password"
                    android:textColor="@color/color_333333"
                    android:textColorHint="#cecece"
                    android:textSize="@dimen/dp_17" />


            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/dp_15"
            android:background="@color/color_E7E7E7"></View>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginLeft="@dimen/dp_15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/new_password"
                android:textColor="@color/color_242525_33"
                android:textSize="@dimen/dp_17" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/et_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_40"
                    android:background="@null"
                    android:hint="@string/please_input_new_password"
                    android:textColor="@color/color_333333"
                    android:textColorHint="#cecece"
                    android:textSize="@dimen/dp_17" />


            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/dp_15"
            android:background="@color/color_E7E7E7"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginLeft="@dimen/dp_15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/confirm_password"
                android:textColor="@color/color_242525_33"
                android:textSize="@dimen/dp_17" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:background="@null"
                    android:hint="@string/new_password_confirm"
                    android:textColor="@color/color_333333"
                    android:textColorHint="#cecece"
                    android:textSize="@dimen/dp_17" />


            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/dp_15"
            android:background="@color/color_E7E7E7"></View>
    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/ll_login_info"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/login_shape"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_34"
        android:text="@string/primary_password_explain"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:text="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
        android:textColor="@color/color_666666"
        android:textSize="@dimen/sp_14" />


</LinearLayout>