<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f8f9fa"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_190"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:background="@drawable/home_item_shape">

        <RelativeLayout
            android:id="@+id/rl_camera"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_23"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_6"
            android:layout_marginTop="@dimen/dp_6"
            android:background="@drawable/camera_shape">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/camera" />


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_add_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/add" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_9"
                android:text="@string/add_photo"
                android:textColor="@color/color_bcbcbc"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_15"
            android:text="@string/device_name_"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_15"
            android:background="@drawable/edit_shape" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_45"
            android:text="@string/model_number"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_15"
            android:background="@drawable/edit_shape" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_15"
            android:text="@string/save_user"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_15"
            android:background="@drawable/edit_shape" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_15"
            android:text="@string/put_place"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_15"
            android:background="@drawable/edit_shape" />
    </LinearLayout>


</LinearLayout>