<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/icon_logo" />

        <LinearLayout
            android:id="@+id/ll_login_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_logo"
            android:layout_marginTop="@dimen/dp_66"
            android:background="@color/white"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/lr_login_user"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_marginLeft="@dimen/dp_30">

                <ImageView
                    android:id="@+id/iv_login_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/user" />

                <EditText
                    android:id="@+id/et_input_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_9"
                    android:layout_toRightOf="@+id/iv_login_user"
                    android:background="@null"
                    android:hint="@string/please_input_user"
                    android:textColor="@color/color_333333"
                    android:textColorHint="#cecece"
                    android:textSize="@dimen/sp_15" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_marginLeft="@dimen/dp_30"
                android:background="@color/color_C8C7CC"></View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_marginLeft="@dimen/dp_30">

                <ImageView
                    android:id="@+id/iv_login_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/lockopen" />

                <EditText
                    android:id="@+id/et_input_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_9"
                    android:layout_marginRight="50dp"
                    android:layout_toRightOf="@+id/iv_login_password"
                    android:background="@null"
                    android:hint="@string/please_input_password"
                    android:inputType="textPassword"
                    android:textColorHint="#cecece"
                    android:textSize="@dimen/sp_15" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_marginLeft="@dimen/dp_30"
                android:background="@color/color_C8C7CC"></View>

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_below="@+id/ll_login_info"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/login_shape"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_33"
        android:layout_marginTop="@dimen/dp_16">

        <ImageView
            android:id="@+id/iv_remember_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/check" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/remember_password"
            android:textColor="@color/login_"
            android:textSize="@dimen/sp_13" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="35dp"
                android:text="@string/forget_password"
                android:textColor="@color/color_999999"
                android:textSize="@dimen/sp_13" />


        </RelativeLayout>

    </LinearLayout>


</LinearLayout>